--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,29 @@
 	box-sizing: border-box;
 	margin:0;
 	padding:0;
-	font-size:1rem;
 }
 
 html {
-	font-size:62.5%;
+	font-size:16px;
+}
+
+body{
+}
+#menu{
+	background-color: #e3dede;
+	font-size: 1.2rem;
+}
+#menu a{
+	color: #333030;
+}
+#menu a:visited{
+
+}
+.global{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 95%;
+	margin-right: auto;
+	margin-left: auto;
 }
